--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -4,55 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5CA13"
+    android:background="#F0F0F0"
     android:clickable="false"
     android:visibility="visible"
     tools:context=".MainActivity"
     tools:visibility="visible">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="228dp"
+        android:layout_height="77dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.519"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.046"
+        app:srcCompat="@drawable/bike" />
+
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="154dp"
-        android:layout_height="51dp"
+        android:layout_width="107dp"
+        android:layout_height="41dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
         android:fontFamily="serif"
-        android:text="Shared"
+        android:text="Bike"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="34sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.396" />
+        app:layout_constraintVertical_bias="0.403" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="105dp"
-        android:layout_height="46dp"
+        android:layout_width="124dp"
+        android:layout_height="45dp"
         android:fontFamily="serif"
-        android:text="Bike"
+        android:text="Kamba"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_red_light"
         android:textSize="34sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.31"
+        app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.812" />
+        app:layout_constraintVertical_bias="0.877" />
 
     <view
         android:id="@+id/view"
+        style="@style/C_Components2"
         class="androidx.appcompat.widget.ActionMenuView"
         android:layout_width="344dp"
         android:layout_height="532dp"
         android:layout_marginBottom="9dp"
-        android:background="@color/white"
+
+
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,13 +114,13 @@
 
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/logar"
         android:layout_width="215dp"
         android:layout_height="56dp"
         android:text="Salvar"
         android:textSize="20sp"
         android:visibility="visible"
-        app:backgroundTint="#F5CA13"
+        app:backgroundTint="#0069D9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +128,7 @@
         app:layout_constraintVertical_bias="0.665" />
 
     <Button
-        android:id="@+id/login2"
+        android:id="@+id/Cancelar"
         android:layout_width="203dp"
         android:layout_height="53dp"
         android:text="Cancelar"
@@ -181,7 +195,7 @@
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <EditText
         android:id="@+id/Nome"
