--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/log"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5CA13"
+    android:background="#F0F0F0"
     android:clickable="false"
     android:visibility="visible"
     tools:context=".MainActivity"
@@ -15,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
-        android:text="Shared"
+        android:text="Bike"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="34sp"
@@ -29,10 +30,10 @@
 
     <view
         android:id="@+id/view"
+        style="@style/C_Components"
         class="androidx.appcompat.widget.ActionMenuView"
         android:layout_width="351dp"
         android:layout_height="230dp"
-        android:background="@color/white"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,13 +43,13 @@
         tools:visibility="visible" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/logar"
         android:layout_width="243dp"
         android:layout_height="70dp"
         android:text="Entrar"
         android:textSize="24sp"
         android:visibility="visible"
-        app:backgroundTint="#F5CA13"
+        app:backgroundTint="#0069D9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +62,7 @@
         style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_width="319dp"
         android:layout_height="54dp"
+        android:drawableRight="@drawable/icon_mail"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
@@ -78,6 +80,7 @@
         android:id="@+id/editTextTextPassword"
         android:layout_width="322dp"
         android:layout_height="48dp"
+        android:drawableRight="@drawable/icon_senha"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
@@ -97,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
-        android:text="Bike"
+        android:text="Kamba"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_red_light"
         android:textSize="34sp"
@@ -115,6 +118,7 @@
         android:layout_width="151dp"
         android:layout_height="36dp"
         android:linksClickable="true"
+        android:onClick="log"
         android:singleLine="true"
         android:text="Criar uma conta"
         android:textColor="@android:color/holo_green_dark"
@@ -125,6 +129,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        app:layout_constraintVertical_bias="0.139" />
+        app:layout_constraintVertical_bias="0.337" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="268dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="254dp"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.068"
+        app:srcCompat="@drawable/bike" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
