--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:height">532dp</item>
         <item name="android:background">@drawable/bkuserimage</item>
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
-
+    </style>
 </resources>
