--- a/app/src/main/res/layout/activity_docas.xml
+++ b/app/src/main/res/layout/activity_docas.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="103dp"
-        android:layout_height="75dp"
+        android:layout_width="176dp"
+        android:layout_height="88dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="138dp"
         android:layout_marginEnd="172dp"
@@ -27,7 +27,7 @@
         android:layout_marginTop="209dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="269dp"
-        android:text="Button"
+        android:text="Voltar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
