--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,11 @@
             <item name="android:background">@drawable/bkcomponent</item>
         </style>
 
-       <!-- <style name="C_Components2">
+       <style name="C_Components2">
             <item name="android:layout_width">match_parent</item>
             <item name="android:height">532dp</item>
             <item name="android:background">@drawable/bkcomponent</item>
-        </style>-->
+        </style>
 
         <!--<style name="C_User">
             <item name="android:layout_width">match_parent</item>
