--- a/app/src/main/res/layout/activity_docas.xml
+++ b/app/src/main/res/layout/activity_docas.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/fundo"
     android:layout_height="match_parent"
     tools:context=".Docas">
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="176dp"
-        android:layout_height="88dp"
+        android:layout_width="332dp"
+        android:layout_height="215dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="138dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="172dp"
         android:text="Testando"
+        android:textColor="@color/pink"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.423"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,5 +36,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.923" />
 </androidx.constraintlayout.widget.ConstraintLayout>
