--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,9 +13,21 @@
 
        <style name="C_Components2">
             <item name="android:layout_width">match_parent</item>
-            <item name="android:height">532dp</item>
+           <!-- <item name="android:height">500dp</item>-->
             <item name="android:background">@drawable/bkcomponent</item>
         </style>
+
+    <style name="button">
+
+        <item name="android:background">@drawable/btnfundo</item>
+    </style>
+
+    <style name="button2">
+
+        <item name="android:background">@drawable/btnfundo2</item>
+    </style>
+
+
 
         <!--<style name="C_User">
             <item name="android:layout_width">match_parent</item>
