--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="p1">#001121</color>
     <color name="p2">#45958A</color>
     <color name="p3">#1B0C54</color>
+    <color name="red">#F40A5A</color>
+
 </resources>
