--- a/app/src/main/res/layout/activity_dasboard.xml
+++ b/app/src/main/res/layout/activity_dasboard.xml
@@ -11,6 +11,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -22,6 +23,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -35,6 +37,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/bar_icon" />
 
+
+
         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="0dp"
@@ -42,11 +46,13 @@
             android:layout_marginTop="64dp"
             android:orientation="horizontal"
             android:padding="10dp"
+            android:layout_below="@+id/toolbar"
             android:verticalScrollbarPosition="left"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
 
 
             <RelativeLayout
@@ -94,263 +100,39 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:layout_height="175dp"
+            android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:padding="10dp"
+            android:padding="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout1"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
+            tools:ignore="MissingConstraints"
+            android:layout_height="0dp"
+            app:layout_constraintVertical_bias="0.0">
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1">
+                app:layout_constrainedHeight="true">
 
-                <RelativeLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ListaDocas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="visible">
+                    app:layout_constrainedHeight="true"
+                    >
 
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/imageView21"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
-                        android:text="Estações"
-                        android:textSize="24sp" />
 
-                    <ImageView
-                        android:id="@+id/imageView21"
-                        android:layout_width="97dp"
-                        android:layout_height="75dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginLeft="32dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="47dp"
-                        android:layout_marginRight="47dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                </androidx.recyclerview.widget.RecyclerView>
 
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1">
+            </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible">
 
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/imageView5"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
-                        android:text="Docas"
-                        android:textSize="24sp" />
-
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="97dp"
-                        android:layout_height="75dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginLeft="32dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="47dp"
-                        android:layout_marginRight="47dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-        <LinearLayout
-                                android:id="@+id/linearLayout2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="10dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.0"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
-                                    android:layout_weight="1">
-
-                                    <RelativeLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent">
-
-                                        <TextView
-                                            android:id="@+id/textView9"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_below="@id/imageView9"
-                                            android:layout_centerHorizontal="true"
-                                            android:layout_marginTop="10dp"
-                                            android:text="Estações"
-                                            android:textSize="24sp" />
-
-                                        <ImageView
-                                            android:id="@+id/imageView9"
-                                            android:layout_width="97dp"
-                                            android:layout_height="75dp"
-                                            android:layout_alignParentStart="true"
-                                            android:layout_alignParentLeft="true"
-                                            android:layout_alignParentEnd="true"
-                                            android:layout_alignParentRight="true"
-                                            android:layout_marginStart="32dp"
-                                            android:layout_marginLeft="32dp"
-                                            android:layout_marginTop="15dp"
-                                            android:layout_marginEnd="47dp"
-                                            android:layout_marginRight="47dp"
-                                            app:srcCompat="@drawable/ic_launcher_background" />
-                                    </RelativeLayout>
-                                </androidx.cardview.widget.CardView>
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
-                                    android:layout_weight="1">
-
-                                    <RelativeLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent">
-
-                                        <TextView
-                                            android:id="@+id/textView6"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_below="@id/imageView6"
-                                            android:layout_centerHorizontal="true"
-                                            android:layout_marginTop="10dp"
-                                            android:text="Docas"
-                                            android:textSize="24sp" />
-
-                                        <ImageView
-                                            android:id="@+id/imageView6"
-                                            android:layout_width="97dp"
-                                            android:layout_height="75dp"
-                                            android:layout_alignParentStart="true"
-                                            android:layout_alignParentLeft="true"
-                                            android:layout_alignParentEnd="true"
-                                            android:layout_alignParentRight="true"
-                                            android:layout_marginStart="32dp"
-                                            android:layout_marginLeft="32dp"
-                                            android:layout_marginTop="15dp"
-                                            android:layout_marginEnd="47dp"
-                                            android:layout_marginRight="47dp"
-                                            app:srcCompat="@drawable/ic_launcher_background" />
-                                    </RelativeLayout>
-                                </androidx.cardview.widget.CardView>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="10dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.0"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
-                                    android:layout_weight="1">
-
-                                    <RelativeLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent">
-
-                                        <TextView
-                                            android:id="@+id/textView7"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_below="@id/imageView7"
-                                            android:layout_centerHorizontal="true"
-                                            android:layout_marginTop="10dp"
-                                            android:text="Estações"
-                                            android:textSize="24sp" />
-
-                                        <ImageView
-                                            android:id="@+id/imageView7"
-                                            android:layout_width="97dp"
-                                            android:layout_height="75dp"
-                                            android:layout_alignParentStart="true"
-                                            android:layout_alignParentLeft="true"
-                                            android:layout_alignParentEnd="true"
-                                            android:layout_alignParentRight="true"
-                                            android:layout_marginStart="32dp"
-                                            android:layout_marginLeft="32dp"
-                                            android:layout_marginTop="15dp"
-                                            android:layout_marginEnd="47dp"
-                                            android:layout_marginRight="47dp"
-                                            app:srcCompat="@drawable/ic_launcher_background" />
-                                    </RelativeLayout>
-                                </androidx.cardview.widget.CardView>
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
-                                    android:layout_weight="1">
-
-                                    <RelativeLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent">
-
-                                        <TextView
-                                            android:id="@+id/textView8"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_below="@id/imageView8"
-                                            android:layout_centerHorizontal="true"
-                                            android:layout_marginTop="10dp"
-                                            android:text="Docas"
-                                            android:textSize="24sp" />
-
-                                        <ImageView
-                                            android:id="@+id/imageView8"
-                                            android:layout_width="97dp"
-                                            android:layout_height="75dp"
-                                            android:layout_alignParentStart="true"
-                                            android:layout_alignParentLeft="true"
-                                            android:layout_alignParentEnd="true"
-                                            android:layout_alignParentRight="true"
-                                            android:layout_marginStart="32dp"
-                                            android:layout_marginLeft="32dp"
-                                            android:layout_marginTop="15dp"
-                                            android:layout_marginEnd="47dp"
-                                            android:layout_marginRight="47dp"
-                                            app:srcCompat="@drawable/ic_launcher_background" />
-                                    </RelativeLayout>
-                                </androidx.cardview.widget.CardView>
-                            </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
