--- a/app/src/main/res/layout/activity_docas.xml
+++ b/app/src/main/res/layout/activity_docas.xml
@@ -7,32 +7,17 @@
     android:background="@drawable/fundo"
     tools:context=".Docas">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="360dp"
-        android:layout_height="430dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="172dp"
-        android:text="Testando"
-        android:textColor="@color/pink"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.423"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ListaDocas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="125dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="165dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="122dp"
-        android:layout_marginBottom="215dp"
-        android:text="Voltar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+
+
+
+
+></androidx.constraintlayout.widget.ConstraintLayout>
