--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo"
+    android:background="@color/p1"
     tools:context=".cadastrar">
 
     <ImageView
@@ -29,12 +29,12 @@
         android:textColor="#FDBC01"
         android:textSize="34sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/TextEmail"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.271"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
+        app:layout_constraintVertical_bias="0.474"/>
 
     <TextView
         android:id="@+id/textView9"
@@ -44,10 +44,10 @@
         android:text="Bike"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/p1"
+        android:textColor="#FDBC01"
         android:textSize="34sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/TextEmail"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -61,8 +61,6 @@
         android:layout_width="356dp"
         android:layout_height="432dp"
         android:layout_marginBottom="140dp"
-
-
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,8 +68,23 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible" />
 
+    <TextView
+        android:id="@+id/textFails2"
+        android:layout_width="314dp"
+        android:layout_height="35dp"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/txtPassword2"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -79,13 +92,14 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextEmail"
+        app:layout_constraintTop_toBottomOf="@+id/textEmail"
         app:layout_constraintVertical_bias="0.193" />
 
     <TextView
@@ -98,7 +112,7 @@
         android:textColor="@android:color/holo_green_dark"
         android:textSize="16sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/TextEmail"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toEndOf="@+id/view"
@@ -109,31 +123,25 @@
 
     <Button
         android:id="@+id/logar"
-        style="@style/button"
+
         android:layout_width="215dp"
         android:layout_height="56dp"
-        android:background="@drawable/btnfundo"
         android:text="Concluir"
-        android:textColorHighlight="@android:color/transparent"
-        android:textColorLink="@android:color/transparent"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.665" />
+        app:layout_constraintVertical_bias="0.665"
+        />
 
     <Button
         android:id="@+id/Cancelar"
-        style="@style/button2"
+
         android:layout_width="203dp"
         android:layout_height="53dp"
-
-        android:background="@drawable/btnfundo2"
         android:text="Cancelar"
-        android:textColorHighlight="@color/white"
-        android:textColorLink="@color/white"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -141,10 +149,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.761"
-        app:rippleColor="@android:color/transparent" />
+         />
 
     <EditText
-        android:id="@+id/TextEmail"
+        android:id="@+id/textEmail"
         style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_width="317dp"
         android:layout_height="50dp"
@@ -153,7 +161,7 @@
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:guidelineUseRtl="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +170,7 @@
         app:layout_constraintVertical_bias="0.417" />
 
     <EditText
-        android:id="@+id/TextPassword"
+        android:id="@+id/txtPassword"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -170,13 +178,14 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextEmail"
+        app:layout_constraintTop_toBottomOf="@+id/textEmail"
         app:layout_constraintVertical_bias="0.043" />
 
    <!-- <TextView
@@ -198,14 +207,15 @@
         app:layout_constraintVertical_bias="0.276" />-->
 
     <EditText
-        android:id="@+id/Nome"
+        android:id="@+id/txtNome"
         android:layout_width="314dp"
         android:layout_height="49dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="text"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/TextEmail"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/view"
