--- a/app/src/main/res/layout/activity_dasboard.xml
+++ b/app/src/main/res/layout/activity_dasboard.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".dasboard"
     android:visibility="visible"
-    android:background="@drawable/fundo"
+    android:background="@color/p1"
     android:id="@+id/drawlayout"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
-
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
@@ -21,15 +20,17 @@
         android:layout_gravity="start"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ok"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        tools:visibility="visible">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/p1"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +43,7 @@
         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="0dp"
-            android:layout_height="175dp"
+            android:layout_height="150dp"
             android:layout_marginTop="64dp"
             android:orientation="horizontal"
             android:padding="10dp"
@@ -99,41 +100,31 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:padding="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical"
+            android:padding="1dp"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
+            android:verticalScrollbarPosition="left"
+            app:layout_constraintBottom_toBottomOf="@id/ok"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
             tools:ignore="MissingConstraints"
-            android:layout_height="0dp"
-            app:layout_constraintVertical_bias="0.0">
-            <RelativeLayout
+            android:layout_height="0dp">
+
+            <ListView
+                android:id="@+id/listdocas1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constrainedHeight="true">
+                android:layout_below="@+id/linearLayout1"
+                app:layout_constraintTop_toBottomOf="@id/linearLayout1"
+                >
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/ListaDocas"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constrainedHeight="true"
-                    >
-
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-
-            </RelativeLayout>
+            </ListView>
 
 
         </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
