--- a/app/src/main/res/layout/activity_docas.xml
+++ b/app/src/main/res/layout/activity_docas.xml
@@ -7,17 +7,47 @@
     android:background="@drawable/fundo"
     tools:context=".Docas">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ListaDocas"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/p1"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        android:textAlignment="center"
+        app:titleTextColor="@color/white"
+        android:tooltipText="gggggggg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/back"/>
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:padding="1dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:verticalScrollbarPosition="left"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:ignore="MissingConstraints"
+        android:layout_height="0dp">
+
+        <ListView
+            android:id="@+id/ListaDocas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/linearLayout1"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
+            >
+
+        </ListView>
 
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
 
 
-
-
-
-></androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
