--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
     <color name="p2">#45958A</color>
     <color name="p3">#1B0C54</color>
     <color name="red">#F40A5A</color>
+    <color name="green">#4CAF50</color>
+    <color name="status_bar_color">#FF000000</color>
+    <color name="layout_border_color">#FF111111</color>
+
 
 </resources>
